<resources>
    <string name="app_name">WalkAndPick</string>
    <string name="connection">Connection !</string>
    <string name="newAccount">Create a new account</string>
    <string name="register">Register !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Logout</string>
    <string name="courses">Courses</string>
    <string name="gallery">Gallery</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="firstName">First name</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="mail">Mail address</string>
    <string name="password">Password</string>
    <string name="passwordBis">Password confirmation</string>
    <string name="city">City</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulty</string>
    <string name="begin">Start !</string>
    <string name="provider_disabled">Your access to the localization is deactivated!</string>
    <string name="provider_new_status">The provider %1$s has now a new status %2$s</string>
    <string name="takePicture">Take Picture</string>
    <string name="titleNotification">You have arrived !</string>
    <string name="descriptionNotification">See description of location</string>
    <string name="goNext">Go Next</string>
    <string name="goMenu">Go Menu</string>
    <string name="restart">Don\'t hesitate to start again!</string>
    <string name="finish">You have completed the course!</string>
    <string name="searchPlace">Search !</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="kilometer">Kilometer</string>
    <string name="beginPlace">Start point</string>
    <!--Erreur -->
    <string name="mailInvalid">The format of the e-mail address is invalid</string>
    <string name="emptyField">Please complete all fields !</string>
    <string name="passwordInvalid">The password must have at least one digit, a lowercase letter, a capital letter, a special character and must be a minimum of 8 characters</string>
    <string name="passwordNotSame">Passwords are not the same</string>
    <string name="title_activity_map">Map</string>
    <string name="errorConnection">Your username or password is invalid</string>
    <string name="errorInternet">Unable to join server, check your internet connection</string>

    <!--Error Server-->
    <string name="error400">Error 400 - The syntax of the query is invalid</string>
    <string name="error403">Error 403 - You don\'t have the necessary access</string>
    <string name="error500">Error 500 - Internal Server Error</string>
    <string name="error404">Error 404 - The resource was not found</string>
    <string name="error408">Error 408 - Wait time is exceeded</string>
    <string name="error503">Error 503 - The server is unavailable</string>
    <string name="error401">Error 401 - You don\'t have permission to access the resource</string>
    <string name="error">An unknown error occurred</string>
</resources>
