<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LogActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="167dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textCursorDrawable="@color/EditText"
        android:backgroundTint="@color/EditText"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textCursorDrawable="@color/EditText"
        android:backgroundTint="@color/EditText"
        android:textColorLink="@android:color/background_light"
        tools:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/connection"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@color/colorButton"
        android:text="@string/connection"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/newAccount"
        android:layout_width="213dp"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:background="@color/colorBackGround"
        android:elevation="0dp"
        android:text="@string/newAccount"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />
</LinearLayout>